--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,10 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+    url: /#publications/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Education and Experiences"
+    url: /#Education and Experiences/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Publications"
+    url: /#Publications/
